Incrementação do texto

--- a/LoP(01).html
+++ b/LoP(01).html
@@ -4,6 +4,7 @@
 	  <script src="meu_codigo.js"></script>
 	</head>
 	<body>
-		Seja bem vindo ao meu mundo cor de rosa. 
+		Seja bem vindo ao meu mundo cor de rosa.
+Tô com sono
 	</body>
 </html>
